--- a/static/css/main.css
+++ b/static/css/main.css
@@ -215,7 +215,7 @@ a#scrollUp i{
 
 
 .shop-menu ul li a:hover {
-	color:#fe980f;
+	color:#00BFFF;
 	background:#fff;
 }
 
@@ -249,7 +249,7 @@ a#scrollUp i{
 
 .mainmenu ul li a:hover, .mainmenu ul li a.active,  .shop-menu ul li a.active{
 	background:none;
-	color:#fdb45e;
+	color:#00BFFF;
 }
 
 .search_box input {
@@ -302,7 +302,7 @@ ul.sub-menu {
 }
 
 .dropdown ul.sub-menu li .active{
-  color: #FDB45E;
+  color: #00BFFF;
   padding-left: 0;
 }
 
@@ -367,7 +367,7 @@ ul.sub-menu {
 }
 
 .companyinfo h2  span{
-  color:#FE980F;
+  color:#00BFFF;
 }
 
 .companyinfo p {
@@ -405,7 +405,7 @@ ul.sub-menu {
   top: 0;
   width: 100%;
   height: 61px;
-  background: #FE980F;
+  background: #00BFFF;
   border-radius: 3px;
   color: #FFF;
   font-size: 20px;
@@ -501,7 +501,7 @@ ul.sub-menu {
 
 .single-widget ul li a:hover{
 	background:none;
-	color:#FE980F;
+	color:#00BFFF;
 }
 
 
@@ -518,7 +518,7 @@ ul.sub-menu {
 
 
 .searchform button {
-  background: #FE980F;
+  background: #00BFFF;
   border: medium none;
   border-radius: 0;
   margin-left: -5px;
@@ -533,7 +533,7 @@ ul.sub-menu {
 
 .searchform  button:hover, 
 .searchform  button:focus{
-	background-color:#FE980F;
+	background-color: #00BFFF;
 }
 
 .searchform p {
@@ -577,7 +577,7 @@ ul.sub-menu {
 }
 
 .carousel-indicators li.active {
-	  background: #FE980F;
+	  background: #00BFFF;
 }
 
 .item {
@@ -603,7 +603,7 @@ ul.sub-menu {
 }
 
 .item h1 span {
-	color:#FE980F;
+	color:#00BFFF;
 }
 
 .item h2 {
@@ -623,7 +623,7 @@ ul.sub-menu {
 }
 
 .get {
-  background: #FE980F;
+  background: #00BFFF;
   border: 0 none;
   border-radius: 0;
   color: #FFFFFF;
@@ -635,7 +635,7 @@ ul.sub-menu {
 
 
 .item button:hover {
-  background: #FE980F;
+  background: #00BFFF;
 }
 
 .control-carousel {
@@ -646,7 +646,7 @@ ul.sub-menu {
 }
 
 .control-carousel:hover{
-  color: #FE980F ;
+  color: #00BFFF ;
 }
 
 .right {
@@ -660,7 +660,7 @@ ul.sub-menu {
   padding-top: 15px;
 }
 .left-sidebar h2, .brands_products h2 {
-  color: #FE980F;
+  color: #00BFFF;
   font-family: 'Roboto', sans-serif;
   font-size: 18px;
   font-weight: 700;
@@ -807,7 +807,7 @@ h2.title:before{
 
 
 .tooltip-inner {
-  background-color: #FE980F;
+  background-color: #00BFFF;
   border-radius: 4px;
   color: #FFFFFF;
   max-width: 200px;
@@ -835,7 +835,7 @@ h2.title:before{
 
 
 h2.title {
-  color: #FE980F;
+  color: #00BFFF;
   font-family: 'Roboto', sans-serif;
   font-size: 18px;
   font-weight: 700;
@@ -953,7 +953,7 @@ h2.title {
 }
 
 .add-to-cart:hover {
-  background: #FE980F;
+  background: #00BFFF;
   border: 0 none;
   border-radius: 0;
   color: #FFFFFF;
@@ -968,7 +968,7 @@ h2.title {
 }
 
 .add-to-cart:hover {
-  background: #FE980F;
+  background: #00BFFF;
   color: #FFFFFF;
 }
 
@@ -999,7 +999,7 @@ h2.title {
 
 .category-tab ul {
   background: #40403E;
-  border-bottom: 1px solid #FE980F;
+  border-bottom: 1px solid #00BFFF;
   list-style: none outside none;
   margin: 0 0 30px;
   padding: 0;
@@ -1017,7 +1017,7 @@ h2.title {
 }
 
 .category-tab ul  li  a:hover{
-	background:#FE980F;
+	background:#00BFFF;
 	color:#fff;
 }
 
@@ -1026,7 +1026,7 @@ h2.title {
   -moz-border-left-colors: none;
   -moz-border-right-colors: none;
   -moz-border-top-colors: none;
-  background-color: #FE980F;
+  background-color: #00BFFF;
   border:0px;
   color: #FFFFFF;
   cursor: default;
@@ -1055,7 +1055,7 @@ h2.title {
 }
 
 .recommended-item-control i {
-  background: none repeat scroll 0 0 #FE980F;
+  background: none repeat scroll 0 0 #00BFFF;
   color: #FFFFFF;
   font-size: 20px;
   padding: 4px 10px;
@@ -1114,8 +1114,8 @@ h2.title {
 }
 
 .pagination  .active  a, .pagination  .active  span, .pagination  .active  a:hover, .pagination  .active  span:hover, .pagination  .active  a:focus, .pagination  .active  span:focus {
-  background-color: #FE980F;
-  border-color: #FE980F;
+  background-color: #00BFFF;
+  border-color: #00BFFF;
   color: #FFFFFF;
   cursor: default;
   z-index: 2;
@@ -1135,7 +1135,7 @@ h2.title {
 }
 
 .pagination  li  a:hover{
-	background:#FE980F;
+	background:#00BFFF;
 	color:#fff;
 }
 
@@ -1179,7 +1179,7 @@ h2.title {
 }
 
 .view-product h3 {
-  background: #FE980F;
+  background: #00BFFF;
   bottom: 0;
   color: #FFFFFF;
   font-family: 'Roboto', sans-serif;
@@ -1205,7 +1205,7 @@ h2.title {
   top: 35%;
 }
 .item-control i {
-  background: #FE980F;
+  background: #00BFFF;
   color: #FFFFFF;
   font-size: 20px;
   padding: 5px 10px;
@@ -1250,7 +1250,7 @@ h2.title {
 }
 
 .product-information span span {
-  color: #FE980F;
+  color: #00BFFF;
   float: left;
   font-family: 'Roboto', sans-serif;
   font-size: 30px;
@@ -1283,7 +1283,7 @@ h2.title {
 
 
 .cart {
-  background: #FE980F;
+  background: #00BFFF;
   border: 0 none;
   border-radius: 0;
   color: #FFFFFF;
@@ -1328,13 +1328,13 @@ h2.title {
 }
 
 #reviews ul li a i{
-	color:#FE980F;
+	color:#00BFFF;
 	padding-right:8px;
 }
 
 #reviews ul li a:hover{
 	background:#fff;
-	color:#FE980F;
+	color:#00BFFF;
 }
 
 #reviews p{
@@ -1374,7 +1374,7 @@ h2.title {
 }
 
 #reviews button {
-  background: #FE980F;
+  background: #00BFFF;
   border: 0 none;
   border-radius: 0;
   color: #FFFFFF;
@@ -1413,7 +1413,7 @@ h2.title {
 }
 
 .content-404 h2 a {
-  background: #FE980F;
+  background: #00BFFF;
   color: #FFFFFF;
   font-family: 'Roboto', sans-serif;
   font-size: 44px;
@@ -1481,7 +1481,7 @@ h2.title {
 }
 
 .login-form form button, .signup-form form button {
-  background: #FE980F;
+  background: #00BFFF;
   border: medium none;
   border-radius: 0;
   color: #FFFFFF;
@@ -1506,7 +1506,7 @@ h2.title {
 
 
 .or{
-	background: #FE980F;
+	background: #00BFFF;
 	border-radius: 40px;
 	color: #FFFFFF;
 	font-family: 'Roboto', sans-serif;
@@ -1538,7 +1538,7 @@ h2.title {
 }
 
 .breadcrumbs .breadcrumb li a {
-  background:#FE980F;
+  background:#00BFFF;
   color: #FFFFFF;
   padding: 3px 7px;
 }
@@ -1549,7 +1549,7 @@ h2.title {
   width: auto;
   border-width: 8px;
   border-style: solid;
-  border-color:transparent transparent transparent #FE980F;
+  border-color:transparent transparent transparent #00BFFF;
   position: absolute;
   top: 11px;
   left:48px;
@@ -1567,7 +1567,7 @@ h2.title {
 
 
 #cart_items .cart_info .cart_menu {
-  background: #FE980F;
+  background: #00BFFF;
   color: #fff;
   font-size: 16px;
   font-family: 'Roboto', sans-serif;
@@ -1622,7 +1622,7 @@ h2.title {
 
 
 #cart_items .cart_info .cart_total_price {
-  color: #FE980F;
+  color: #00BFFF;
   font-size: 24px;
 }
 
@@ -1669,7 +1669,7 @@ h2.title {
 }
 
 .cart_delete a:hover {
-  background:#FE980F
+  background:#00BFFF
 }
 
 
@@ -1774,7 +1774,7 @@ h2.title {
 }
 
 .update, .check_out {
-  background: #FE980F;
+  background: #00BFFF;
   border-radius: 0;
   color: #FFFFFF;
   margin-top: 18px;
@@ -1841,7 +1841,7 @@ h2.title {
 }
 
 .checkout-options .nav li a {
-  color: #FE980F;
+  color: #00BFFF;
   font-size: 18px;
   font-weight: normal;
   padding: 0
@@ -1855,7 +1855,7 @@ h2.title {
   margin-right: 10px;
   border-radius: 50%;
   padding: 5px;
-  background: #FE980F;
+  background: #00BFFF;
   color:#fff;
   font-size: 14px;
   padding: 2px 3px;
@@ -1886,7 +1886,7 @@ h2.title {
 
 
 .shopper-info .btn-primary {
-  background: #FE980F;
+  background: #00BFFF;
   border: 0 none;
   border-radius: 0;
   margin-right: 15px;
